更新readme，增加演示视频；更新appconfig，增加绝区零默认配置支持

--- a/appconfig.json
+++ b/appconfig.json
@@ -3,5 +3,10 @@
         "name" : "StarRail",
         "package" : "com.miHoYo.hkrpg",
         "activity" : "com.mihoyo.combosdk.ComboSDKActivity"
+    },
+    {
+        "name" : "ZZZ",
+        "package" : "com.miHoYo.Nap",
+        "activity" : "com.mihoyo.combosdk.ComboSDKActivity"
     }
 ]
